--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  flutter_barcode_scanner: ^2.0.0
+  flutter_barcode_scanner: ^2.0.0  
+  openfoodfacts:
+    git:
+      url: https://github.com/openfoodfacts/openfoodfacts-dart.git
+      ref: master # branch name
+  csv: ^5.0.1
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +69,8 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - assets
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
