--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
     sdk: flutter
   adobe_xd: ^2.0.1
   toggle_switch: ^2.0.1
-  sticky_headers: ^0.3.0"
+  #sticky_headers: ^0.3.0"
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -44,6 +44,8 @@ dependencies:
       url: https://github.com/openfoodfacts/openfoodfacts-dart.git
       ref: master # branch name
   csv: ^5.0.1
+  multiselect_formfield: ^0.1.7
+  sticky_headers: ^0.3.0+2
 
 dev_dependencies:
   flutter_test:
